Archive2/05/30b6b906b7b039/output
+ g++-4.9 -std=c++11 -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion main.cpp
main.cpp: In instantiation of 'Foo::Foo(const T&, const U&) [with T = int; U = int]':
main.cpp:27:12:   required from here
main.cpp:13:9: error: static assertion failed: blah
         static_assert(std::is_same<T, Bar>::value &&
         ^
